# R3AKTClient

./: .codex-spa-server.py  .gitignore  AGENTS.md  DOCUMENTATION.md  IMPLEMENT.md  PLANS.md  README.md  package-lock.json  package.json  playwright.config.ts
.cargo/: config.local.toml.example
.github/workflows/: ci.yml
API/: ReticulumCommunityHub-Messages.yaml  ReticulumCommunityHub-SouthboundCommands.json
apps/mobile/: README.md  capacitor.config.js  capacitor.config.ts  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/mobile/android/: capacitor.settings.gradle  gradle.properties  r3akt-ui.xml
apps/mobile/android/app/: build.gradle  capacitor.build.gradle
apps/mobile/ios/App/: Podfile
apps/mobile/src/: App.vue  App.vue.js  assetsAssignmentsStore.spec.ts  checklistsStore.spec.ts  commsChatStore.spec.ts  featureStores.spec.ts  featureViewWiring.spec.ts  filesMediaStore.spec.ts  main.ts  missionCoreStore.spec.ts  projectionStore.spec.ts  router.js  router.parity.spec.ts  router.ts  sessionTelemetryStore.spec.ts  styles.css  teamsSkillsStore.spec.ts
apps/mobile/src/components/: ActionMessageList.vue.js  ActionMessageTable.vue.js  PeerRow.vue.js  StatusPill.vue.js  TopServiceCards.vue  TopServiceCards.vue.js
apps/mobile/tools/: generate-stitch-screens.mjs
crates/reticulum_mobile/: Cargo.toml
crates/reticulum_mobile/src/: jni_bridge.rs  lib.rs  node.rs  reticulum_mobile.udl  runtime.rs  sdk_backend.rs  types.rs
crates/reticulum_mobile/tests/: live_rch_lxmf.rs
docs/R3AKTClient/: APIANnalysis.md  APIANnalysis_clientImplementationSet.md  ImplementationGapAnalysis.md  R3AKT_ReticulumPayload.md  R3AKT_client_CODEX_Implementation_plan.md  README.md  UI_BACKEND_BACKLOG.md  r3aktClient_implementationPlan.md
docs/plans/: Reticulum_Mobile_CODEX_Implementation_Prompt.md
docs/stitch/4350946208414714711/: manifest.json
tests/: mobileFlows.spec.ts  p4Visual.spec.ts
tests/support/: p4VisualHarness.ts
tools/codegen/: README.md  check-client-operation-coverage.mjs  generate-client-operation-catalog.mjs
(+220 files in other folders)
