[package]
name = "reticulum_mobile"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
reticulum = { package = "reticulum", git = "https://github.com/FreeTAKTeam/LXMF-rs", rev = "87c71c94d1e76cb1acf33642dc6e02f36142c2e8" }
base64 = "0.22"
crossbeam-channel = "0.5"
fs-err = "2.11.0"
hex = "0.4"
jni = "0.21"
log = "0.4"
lxmf = { git = "https://github.com/FreeTAKTeam/LXMF-rs", rev = "87c71c94d1e76cb1acf33642dc6e02f36142c2e8", default-features = false }
lxmf-sdk = { git = "https://github.com/FreeTAKTeam/LXMF-rs", rev = "87c71c94d1e76cb1acf33642dc6e02f36142c2e8", default-features = false, features = ["std"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
regex = "1.10.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmpv = "1"
thiserror = "1"
tokio = { version = "1.44.2", features = ["full"] }
uniffi = "0.28"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
